--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <script src="script.js" defer></script>
     <link rel="icon" type="image/png" href="./images/cadastro.png">
     
-    <!-- Inclui a biblioteca SweetAlert -->
-    <!-- <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script> -->
+    <!-- biblioteca SweetAlert -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
 </head>
 <body>
@@ -38,8 +38,8 @@
 
             <div class="input-box">
                 <span class="icon">
-                    <ion-icon name="calendar"></ion-icon>                
-                </span>
+                    <ion-icon name="calendar"></ion-icon>   
+                                 </span>
                 <input class="input-number" min="0" 
                 type="number" name="txtAge" placeholder="Insira a idade" required>
                 <label>Idade</label>
